# diff-match-patch-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  dmp  example.cpp
.github/workflows/: build_cmake.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
diff-match-patch-cpp/: diff_match_patch.h  diff_match_patch_base.h
diff-match-patch-cpp/algorithms/: dmp_algorithms_common.h  dmp_algorithms_diff.h  dmp_algorithms_match.h  dmp_algorithms_patch.h
diff-match-patch-cpp/tests/: dmp_speedtest_wstring.cpp  dmp_test_non_allocating.cpp  dmp_test_non_allocating_interface.h  dmp_test_string.cpp  dmp_test_wstring.cpp  dmp_tests.h
diff-match-patch-cpp/traits/: dmp_clock_traits_chrono.h  dmp_clock_traits_none.h  dmp_container_traits_non_allocating.h  dmp_container_traits_std.h  dmp_default_char_traits.h  dmp_encoding_sub_traits.h  dmp_string_traits_non_allocating.h  dmp_string_traits_string.h  dmp_string_traits_wstring.h
diff-match-patch-cpp/types/: dmp_container.h  dmp_diff.h  dmp_patch.h  dmp_settings.h
diff-match-patch-cpp/utils/: dmp_encoding.h  dmp_fixedsize_stringpool.h  dmp_smallmap.h  dmp_smallvector.h  dmp_stringpool.h  dmp_stringpool_base.h  dmp_stringview.h  dmp_stringwrapper.h  dmp_stringwrapper_utils.h  dmp_traits.h  dmp_unicode.h  dmp_utils.h  dmp_vectorbased_string.h
fuzz_test/: fuzz_tester.cpp
include/: CMakeLists.txt
include/dmp/: CMakeLists.txt  diff_match_patch.h  diff_match_patch_base.h
include/dmp/algorithms/: CMakeLists.txt  dmp_algorithms_common.h  dmp_algorithms_diff.h  dmp_algorithms_match.h  dmp_algorithms_patch.h
include/dmp/traits/: CMakeLists.txt  dmp_clock_traits_chrono.h  dmp_clock_traits_none.h  dmp_container_traits_non_allocating.h  dmp_container_traits_std.h  dmp_default_char_traits.h  dmp_encoding_sub_traits.h  dmp_string_traits_non_allocating.h  dmp_string_traits_string.h  dmp_string_traits_wstring.h
include/dmp/types/: CMakeLists.txt  dmp_container.h  dmp_diff.h  dmp_patch.h  dmp_settings.h
include/dmp/utils/: CMakeLists.txt  dmp_encoding.h  dmp_fixedsize_stringpool.h  dmp_smallmap.h  dmp_smallvector.h  dmp_stringpool.h  dmp_stringpool_base.h  dmp_stringview.h  dmp_stringwrapper.h  dmp_stringwrapper_utils.h  dmp_traits.h  dmp_unicode.h  dmp_utils.h  dmp_vectorbased_string.h
src/: CMakeLists.txt  diff_match_patch.cpp
test/: CMakeLists.txt  Speedtest1.txt.h  Speedtest2.txt.h  dmp_speedtest_wstring.cpp  dmp_test_constexpr.cpp  dmp_test_interface.h  dmp_test_non_allocating.cpp  dmp_test_non_allocating_interface.h  dmp_test_string.cpp  dmp_test_wstring.cpp  dmp_tests.h
tests/: dmp_test_constexpr.cpp  dmp_test_interface.h
